--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,5 +1,5 @@
-@import 'global';
-@import 'mixins';
-@import 'variables';
-
-@import './components/_landing.scss';
+body {
+    padding: 0px;
+    border: 0px;
+    margin: 0px;
+}
