--- a/src/styles/components/_landing.scss
+++ b/src/styles/components/_landing.scss
@@ -1,5 +1,8 @@
-.landing-main {
-    background-color: brown;
-    height: 600px;
-    width: 100vw;
+
+.hero-image-landing {
+    background-image: url('https://static1.squarespace.com/static/55396962e4b053ce148cb1e1/t/57210fcab6aa60cca01f49fb/1461784525042/rolleiflex-brooklyn-film-camera.jpg?format=1500w');
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
 }
