--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -3,6 +3,9 @@
     background-color: rgba(31, 31, 31, 0.728);
     height: 60px;
     width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     a {
         color: rgb(255, 255, 255);
     }
@@ -13,4 +16,13 @@
     background-color: rgb(255, 255, 255);
     border-radius: 50%;
     padding: 5px;
+}
+.navbar-links {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 90%;
+    a {
+        text-decoration: none;
+    }
 }
