Added table to db

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,4 @@
 @import './components/_navbar.scss';
 @import './components/_landing.scss';
 @import './components/_dashboard.scss';
+@import './components/_explore.scss';
