--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,7 @@
 @import url(~slick-carousel/slick/slick.css);
 @import url(~slick-carousel/slick/slick-theme.css);
 body {
+  background-color: black;
   padding: 0px;
   border: 0px;
   margin: 0px; }
@@ -71,3 +72,10 @@ body {
   height: 50px;
   width: 200px;
   cursor: pointer; }
+
+.explore-background {
+  background-image: url("https://farm5.staticflickr.com/4588/38472835604_3444c4f0e9_o.jpg");
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center; }
