--- a/src/styles/components/_explore.scss
+++ b/src/styles/components/_explore.scss
@@ -5,3 +5,10 @@
     background-size: cover;
     background-position: center;
 }
+.explore-nav {
+    height: 50px;
+    width: 100vw;
+    background-color: rgba(255, 255, 255, 0.536);
+    position: absolute;
+    top: 60px;
+}
