--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     padding: 0px;
     border: 0px;
     margin: 0px;
