--- a/src/styles/components/_landing.scss
+++ b/src/styles/components/_landing.scss
@@ -12,8 +12,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    font-size: 100px;
+    font-size: 200px;
     padding-top: 100px;
+    // font-family: 'Anton', sans-serif;
+    font-family: 'Crete Round', serif;
 }
 .buttons-landing-main {
     display: flex;
@@ -21,23 +23,31 @@
     justify-content: center;
     align-items: center;
     button:hover {
-        background-color: rgb(255, 255, 190);
-        font-size: 20px;
+        // background-color: rgb(255, 255, 190);
+        // font-size: 15px;
+        color: gray;
+    }
+    button:focus {
+        outline-width: 0;
     }
 }
-.login-button-landing {
-    background-color: rgba(255, 255, 255, 0.256);
-    margin: 3px;
-    border: 0px;
-    height: 50px;
-    width: 200px;
-    cursor: pointer;
-}
+// .login-button-landing {
+//     background-color: rgba(255, 255, 255, 0.256);
+//     margin-top: 50px;
+//     border: 0px;
+//     height: 50px;
+//     width: 200px;
+//     font-size: 20px;
+//     cursor: pointer;
+// }
 .create-account-landing {
-    background-color: rgba(255, 255, 255, 0.256);
-    margin: 3px;
+    background-color: rgba(254, 252, 252, 0.762);
+    margin-top: 20px;
     border: 0px;
-    height: 50px;
+    height: 70px;
     width: 200px;
+    font-size: 20px;
     cursor: pointer;
+    border-radius: 3px;
+    font-weight: bolder;
 }
