--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -17,12 +17,44 @@
     border-radius: 50%;
     padding: 5px;
 }
+.nav-logo-2 {
+    font-family: 'Crete Round', serif;
+    font-size: 40px;
+    padding-left: 10px;
+}
 .navbar-links {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 90%;
+    width: 70%;
     a {
         text-decoration: none;
     }
+    a:hover {
+        color: rgb(255, 255, 190);
+    }
+}
+.nav-search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    input:focus {
+        background: white;
+        outline-width: 0;
+    }
+}
+.search-icon {
+    position: relative;
+    right: -38px;
+    height: 22px;
+    width: auto;
+    padding-right: 5px;
+}
+.nav-search-input {
+    background-color: rgb(227, 227, 227);
+    height: 30px;
+    width: 290px;
+    font-size: 15px;
+    border-radius: 4px;
+    padding-left: 40px;
 }
