--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,7 @@
 @import url(~slick-carousel/slick/slick.css);
 @import url(~slick-carousel/slick/slick-theme.css);
 body {
-  background-color: black;
+  background-color: white;
   padding: 0px;
   border: 0px;
   margin: 0px; }
@@ -24,13 +24,43 @@ body {
   border-radius: 50%;
   padding: 5px; }
 
+.nav-logo-2 {
+  font-family: 'Crete Round', serif;
+  font-size: 40px;
+  padding-left: 10px; }
+
 .navbar-links {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 90%; }
+  width: 70%; }
   .navbar-links a {
     text-decoration: none; }
+  .navbar-links a:hover {
+    color: #ffffbe; }
+
+.nav-search {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .nav-search input:focus {
+    background: white;
+    outline-width: 0; }
+
+.search-icon {
+  position: relative;
+  right: -38px;
+  height: 22px;
+  width: auto;
+  padding-right: 5px; }
+
+.nav-search-input {
+  background-color: #e3e3e3;
+  height: 30px;
+  width: 290px;
+  font-size: 15px;
+  border-radius: 4px;
+  padding-left: 40px; }
 
 .hero-image-landing {
   background-image: url("https://static1.squarespace.com/static/55396962e4b053ce148cb1e1/t/57210fcab6aa60cca01f49fb/1461784525042/rolleiflex-brooklyn-film-camera.jpg?format=1500w");
@@ -45,8 +75,9 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-size: 100px;
-  padding-top: 100px; }
+  font-size: 200px;
+  padding-top: 100px;
+  font-family: 'Crete Round', serif; }
 
 .buttons-landing-main {
   display: flex;
@@ -54,24 +85,20 @@ body {
   justify-content: center;
   align-items: center; }
   .buttons-landing-main button:hover {
-    background-color: #ffffbe;
-    font-size: 20px; }
-
-.login-button-landing {
-  background-color: rgba(255, 255, 255, 0.256);
-  margin: 3px;
-  border: 0px;
-  height: 50px;
-  width: 200px;
-  cursor: pointer; }
+    color: gray; }
+  .buttons-landing-main button:focus {
+    outline-width: 0; }
 
 .create-account-landing {
-  background-color: rgba(255, 255, 255, 0.256);
-  margin: 3px;
+  background-color: rgba(254, 252, 252, 0.762);
+  margin-top: 20px;
   border: 0px;
-  height: 50px;
+  height: 70px;
   width: 200px;
-  cursor: pointer; }
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 3px;
+  font-weight: bolder; }
 
 .explore-background {
   background-image: url("https://farm5.staticflickr.com/4588/38472835604_3444c4f0e9_o.jpg");
@@ -79,3 +106,10 @@ body {
   width: 100%;
   background-size: cover;
   background-position: center; }
+
+.explore-nav {
+  height: 50px;
+  width: 100vw;
+  background-color: rgba(255, 255, 255, 0.536);
+  position: absolute;
+  top: 60px; }
