--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -49,9 +49,11 @@
 .search-icon {
     position: relative;
     right: -38px;
+    top: 3px;
     height: 22px;
     width: auto;
     padding-right: 5px;
+    cursor: pointer;
 }
 .nav-search-input {
     background-color: rgb(227, 227, 227);
