navbar work, building upload component

--- a/src/styles/components/_landing.scss
+++ b/src/styles/components/_landing.scss
@@ -15,6 +15,14 @@
     font-size: 200px;
     padding-top: 100px;
     font-family: 'Bungee Shade', cursive;
+    // font-family: 'Crete Round', serif;
+}
+.landing-catch-phrase {
+    color: white;
+    // background-color: black;
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Crete Round', serif;
 }
 .buttons-landing-main {
     display: flex;
