--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,10 @@
 @import './components/_landing.scss';
 @import './components/_dashboard.scss';
 @import './components/_explore.scss';
+
+// font-family: 'Anton', sans-serif;
+// font-family: 'Crete Round', serif;
+// font-family: 'Sarala', sans-serif;
+// font-family: 'Cabin Sketch', cursive;
+// font-family: 'Amethysta', serif;
+// font-family: 'Bungee Shade', cursive;
