--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -11,31 +11,36 @@
     }
 }
 .nav-logo {
-    height: 40px;
-    width: 40px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50%;
-    padding: 5px;
-}
-.nav-logo-2 {
-    // font-family: 'Crete Round', serif;
     font-family: 'Bungee Shade', cursive;
     font-size: 40px;
     padding-left: 10px;
+    margin-right: 30px;
     text-decoration: none;
+    a:hover {
+        color: rgb(255, 255, 190);
+    }
 }
 .navbar-links {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 70%;
+    margin-right: 490px;
     font-family: 'Crete Round', serif;
     a {
         text-decoration: none;
+        padding: 30px;
     }
     a:hover {
         color: rgb(255, 255, 190);
     }
+}
+.upload-icon {
+    height: 45px;
+    width: auto;
+    color: white;
+    // background-color: white;
+    // border-radius: 10px;
 }
 .nav-search {
     display: flex;
@@ -63,4 +68,52 @@
     border-radius: 4px;
     padding-left: 40px;
     margin-right: 10px;
+}
+
+
+
+.navbar {
+    overflow: hidden;
+}
+.navbar a {
+    float: left;
+    color: white;
+    text-align: center;
+    // padding: 14px 16px;
+    text-decoration: none;
+}
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+.dropdown .dropbtn {
+    font-size: 16px;    
+    border: none;
+    outline: none;
+    color: white;
+    // padding: 14px 16px;
+    background-color: inherit;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 60px;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    float: none;
+    color: black;
+    // padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
 }
