--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import './components/_landing.scss';
 @import './components/_dashboard.scss';
 @import './components/_explore.scss';
+@import './components/_upload.scss';
 
 // font-family: 'Anton', sans-serif;
 // font-family: 'Crete Round', serif;
