--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -178,3 +178,18 @@ body {
   background-color: rgba(255, 255, 255, 0.536);
   position: absolute;
   top: 60px; }
+
+.background-image-upload {
+  background-image: url("https://farm5.staticflickr.com/4155/33482599004_01bf81089f_k.jpg");
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.upload-box-main {
+  height: 80%;
+  width: 80%;
+  background-color: white; }
